# Listeningway

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Listeningway.fx  ListeningwayUniforms.fxh  ListeningwayUniforms.fxh.template  README.md  REFACTORING_PLAN.md  audio_analysis.cpp  audio_analysis.h  audio_analysis_constants.h  audio_capture.cpp  audio_capture.h  beat_detector.cpp  beat_detector.h  build.bat  constants.h  deploy.bat  license.md  listeningway.rc  listeningway_addon.cpp  logging.cpp  logging.h  overlay.cpp  overlay.h  prepare.bat  settings.cpp  settings.h  simple_build.bat  simple_energy_beat_detector.cpp  spectral_flux_auto_beat_detector.cpp  spectral_flux_auto_beat_detector.h  uniform_manager.cpp  uniform_manager.h  vcpkg.json
.github/workflows/: release.yml
assets/: listeningway.rc
build-templates/: listeningway.rc.template
docs/: phase2_implementation_summary.md  yagni_analysis.md
docs/template/: release.md
scripts/: deploy.bat
src/audio/: README.md  audio_analysis.cpp  audio_analysis.h  audio_capture.cpp  audio_capture.h  audio_capture_manager.cpp  audio_capture_manager.h  audio_system_manager.h  process_audio_capture.cpp  process_audio_capture.h  raii_wrappers.h
src/audio/analysis/: audio_analysis.cpp  audio_analysis.h
src/audio/beat_detection/: beat_detector.cpp  beat_detector.h  beat_detector_simple_energy.cpp  beat_detector_simple_energy.h  beat_detector_spectral_flux_auto.cpp  beat_detector_spectral_flux_auto.h  simple_energy_beat_detector.cpp  simple_energy_beat_detector.h  spectral_flux_auto_beat_detector.cpp  spectral_flux_auto_beat_detector.h
src/audio/capture/: audio_capture.cpp  audio_capture.h  audio_capture_manager.cpp  audio_capture_manager.h
src/audio/providers/: audio_capture_provider.h  audio_provider_v2.h  off_audio_provider.cpp  off_audio_provider.h  process_audio_provider.cpp  (+5 more)
src/configuration/: Configuration.cpp  Configuration.h  README.md  config_value.cpp  configuration_manager.cpp
src/core/: README.md  SettingsAdapter.h  audio_format_utils.h  constants.h  file_manager.cpp  file_manager.h  listeningway_addon.cpp  modern_settings.h  overlay.cpp  overlay.h  result.h  settings.cpp  settings.h  settings_new.cpp  thread_safety_manager.cpp  thread_safety_manager.h  ui_constants.h  unified_settings.cpp  uniform_manager.cpp  uniform_manager.h
src/utils/: README.md  logging.cpp  logging.h  threading.cpp  threading.h
templates/: ListeningwayUniforms.fxh.template
(+24 files in other folders)
